<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1.0">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:scaleX="0.4"
            android:scaleY="0.4"
            android:src="@drawable/ic_logo_white"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvCopyright"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSignIn"
            style="@style/PrimaryButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/bg_btn_round_primary"
            android:text="@string/login_now" />

        <Button
            android:id="@+id/btnSignUp"
            style="@style/PrimaryButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/bg_btn_round_stroke_primary"
            android:text="@string/sign_up_now" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvCopyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/copyright"
        android:textColor="#ffffff"
        android:textSize="16sp" />

</RelativeLayout>

