<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeRefreshLayoutFood"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundPrimary"
    android:orientation="vertical"
    android:paddingBottom="50dp">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="@dimen/margin_10dp"
                android:orientation="horizontal"
                card_view:cardCornerRadius="@dimen/card_corner_radius_primary"
                card_view:cardElevation="7dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_10dp"
                    android:weightSum="10">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:src="@drawable/ic_follow_category_food" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:gravity="right"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/padding_6dp"
                        android:weightSum="3">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:text="@string/follow_food_category"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="15sp" />

                        <Button
                            android:id="@+id/btnFollowFoodCategory"
                            android:layout_width="150dp"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@drawable/selector_follow_category_button"
                            android:clickable="true"
                            android:drawableLeft="@drawable/ic_follow"
                            android:paddingLeft="6dp"
                            android:paddingRight="6dp"
                            android:text="@string/follow_title"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerViewFoodPromotion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="@dimen/margin_8dp"
                    android:paddingTop="@dimen/margin_8dp" />

                <LinearLayout
                    android:id="@+id/emptyLayoutFood"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:adjustViewBounds="false"
                        android:src="@drawable/ic_discount" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/activity_horizontal_margin"
                        android:text="@string/empty_promotion"
                        android:textSize="18sp" />

                </LinearLayout>

                <include
                    android:id="@+id/progressDialog"
                    layout="@layout/dialog_progress_dialog"
                    android:visibility="gone" />

            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.v4.widget.SwipeRefreshLayout>