<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeRefreshLayoutTechnology"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundPrimary"
    android:orientation="vertical"
    android:paddingBottom="50dp">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginRight="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:orientation="horizontal"
                card_view:cardCornerRadius="@dimen/card_corner_radius_primary"
                card_view:cardElevation="7dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/padding_16dp"
                    android:paddingLeft="@dimen/margin_10dp"
                    android:paddingRight="@dimen/margin_10dp"
                    android:paddingTop="@dimen/margin_16dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:padding="6dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_follow_category_technology" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:orientation="vertical"
                        android:paddingLeft="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/follow_technology_category"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="15sp" />

                        <Button
                            android:id="@+id/btnFollowTechnologyCategory"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:background="@drawable/selector_follow_category_button"
                            android:clickable="true"
                            android:drawableLeft="@drawable/ic_follow"
                            android:drawablePadding="2dp"
                            android:gravity="center"
                            android:paddingLeft="10dp"
                            android:paddingRight="18dp"
                            android:text="@string/follow_title"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/emptyLayoutTechnology"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:adjustViewBounds="false"
                        android:src="@drawable/ic_discount" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/activity_horizontal_margin"
                        android:text="@string/empty_promotion"
                        android:textSize="18sp" />

                </LinearLayout>

                <include
                    android:id="@+id/progressDialog"
                    layout="@layout/dialog_progress_dialog"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerViewTechnologyPromotion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:paddingBottom="@dimen/margin_8dp" />

            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.v4.widget.SwipeRefreshLayout>